# tmenu

./: Cargo.toml  README.adoc
src/: main.rs  menu_item.rs  styles.rs  tmenu.rs  tmenu_settings.rs
src/filter/: case_insensitive.rs  case_sensitive.rs  entry_filter.rs  mod.rs
