[package]
name = "tmenu2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../iced" }
iced_core ={ path = "../iced/core" }
iced_style = { path = "../iced/style" }
iced_futures = { path = "../iced/futures" }
iced_native = { path = "../iced/native" }
iced_winit = { path = "../iced/winit" }
iced_wgpu = { path = "../iced/wgpu" }

[dependencies.winit]
version = "0.25"
git = "https://github.com/iced-rs/winit"
rev = "1e6623c4d06d110e5408dcbdf1edebd07e6a200e"


#iced = { path = "../iced" }
#iced_core = { git = "https://github.com/AndiHofi/iced.git", branch = "master" }
#iced_style = { git = "https://github.com/AndiHofi/iced.git", branch = "master" }
#iced_futures = { git = "https://github.com/AndiHofi/iced.git", branch = "master" }
#iced_native = { git = "https://github.com/AndiHofi/iced.git", branch = "master" }
#

[profile.release]
#strip = true
lto = true
codegen-units = 1