[package]
name = "tmenu2"
authors = ["Toringor <toringor@toringor.at>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#iced = { path = "../iced" }
#iced_core ={ path = "../iced/core" }
#iced_style = { path = "../iced/style" }
#iced_futures = { path = "../iced/futures" }
#iced_native = { path = "../iced/native" }
#iced_winit = { path = "../iced/winit" }
#iced_wgpu = { path = "../iced/wgpu" }


iced_core = { git = "https://github.com/AndiHofi/iced.git", branch = "tmenu_changes" }
iced_style = { git = "https://github.com/AndiHofi/iced.git", branch = "tmenu_changes" }
iced_futures = { git = "https://github.com/AndiHofi/iced.git", branch = "tmenu_changes" }
iced_winit = { git = "https://github.com/AndiHofi/iced.git", branch = "tmenu_changes" }
iced_wgpu = { git = "https://github.com/AndiHofi/iced.git", branch = "tmenu_changes" }
iced_native = { git = "https://github.com/AndiHofi/iced.git", branch = "tmenu_changes" }



[profile.release]
#strip = true
lto = true
codegen-units = 1